--- a/config/dev/hsds/config.yaml
+++ b/config/dev/hsds/config.yaml
@@ -8,6 +8,7 @@ aws_iam_role: null # For EC2 using IAM roles
 aws_region: null
 hsds_endpoint: https://data.biosimulations.dev # used for hateos links in response
 aws_s3_gateway: https://storage.googleapis.com # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
+bucket_name: biosim-hsds-dev # set to use a default bucket, otherwise bucket param is needed for all requests
 #aws_s3_gateway: http://s3low.scality.uchc.edu 
 aws_dynamodb_gateway: null # use for dynamodb endpint, e.g. 'https://dynamodb.us-east-1.amazonaws.com',
 aws_lambda_gateway: null #  use lambda endpoint for region HSDS is running in.  See: https://docs.aws.amazon.com/general/latest/gr/lambda-service.html
@@ -21,7 +22,6 @@ azure_storage_account: null # storage account to use on Azure
 azure_resource_group: null # Azure resource group the container (BUCKET_NAME) belongs to
 root_dir: null # base directory to use for Posix storage
 password_salt: null # salt value if dynamically generated passwords are used
-bucket_name: biosimdev # set to use a default bucket, otherwise bucket param is needed for all requests
 head_port: 5100 # port to use for head node
 head_ram: 512m # memory for head container
 dn_port: 6101 # Start dn ports at 6101
