--- a/config/dev/hsds/config.yaml
+++ b/config/dev/hsds/config.yaml
@@ -33,7 +33,7 @@ rangeget_ram: 1g # memoruy for RANGEGET container
 target_sn_count: 0 # desired number of SN containers
 target_dn_count: 0 # desire number of DN containers
 #! The log level will affect cloud billing costs. 
-log_level: DEBUG # log level.  One of ERROR, WARNING, INFO, DEBUG
+log_level: ERROR # log level.  One of ERROR, WARNING, INFO, DEBUG
 log_prefix: null
 max_tcp_connections: 100 # max number of inflight tcp connections
 head_sleep_time: 10 # max sleep time between health checks for head node
