--- a/cluster/applications/grafana.yaml
+++ b/cluster/applications/grafana.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: ingress-nginx
+    namespace: monitoring
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
