--- a/cluster/grafana/deployment.yaml
+++ b/cluster/grafana/deployment.yaml
@@ -19,6 +19,9 @@ spec:
           requests:
             storage: 100Gi
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: grafana
     spec:      
        # To get storage working. See https://stackoverflow.com/questions/60727107/how-can-i-give-grafana-user-appropriate-permission-so-that-it-can-start-successf
       securityContext:
