--- a/cluster/grafana/kustomization.yaml
+++ b/cluster/grafana/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: monitoring
 resources:
 - deployment.yaml
 - service.yaml
+- ingress.yaml
 images:
 - name: grafana/grafana
   newTag: 8.3.1
