--- a/cluster/nginx-ingress/monitor.yaml
+++ b/cluster/nginx-ingress/monitor.yaml
@@ -30,12 +30,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: ingress-nginx-4.0.18
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: "1.1.2"
     app.kubernetes.io/part-of: ingress-nginx
-    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller-metrics
   namespace: ingress-nginx
@@ -45,7 +42,7 @@ spec:
     - name: metrics
       port: 10254
       protocol: TCP
-      targetPort: metrics
+      targetPort: 10254
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
