--- a/cluster/argocd/overlay/argo-cm.yaml
+++ b/cluster/argocd/overlay/argo-cm.yaml
@@ -109,4 +109,4 @@ data:
         args: ["helm dependency build || true"]
       generate:
         command: ["/bin/sh", "-c"]
-        args: ["helm template . --name-template $ARGOCD_APP_NAME --namespace $ARGOCD_APP_NAMESPACE --include-crds > all.yaml && kustomize build"]
+        args: ["helm template . --name-template $ARGOCD_APP_NAME --include-crds > all.yaml && kustomize build"]
