--- a/cluster/nginx-ingress/base.yaml
+++ b/cluster/nginx-ingress/base.yaml
@@ -468,6 +468,7 @@ metadata:
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
+    release: monitoring
 spec:
   endpoints:
     - port: metrics
