--- a/cluster/applications/prometheus.yaml
+++ b/cluster/applications/prometheus.yaml
@@ -19,6 +19,7 @@ spec:
         - name: ARGOCD_APP_NAMESPACE
           value: monitoring
   project: default
+  revisionHistoryLimit: 0
   syncPolicy:
     automated:
       prune: true
