--- a/overlays/dev/simdata-ingress.yaml
+++ b/overlays/dev/simdata-ingress.yaml
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - data.biosimulations.dev
+      - simdata.api.biosimulations.dev
       secretName: simdata-dev-ingress-tls
   rules:
-  - host: data.biosimulations.dev
+  - host: simdata.api.biosimulations.dev
     http:
       paths:
       - pathType: Prefix
